{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 25,
  "lineage": "70e4ad4a-8523-3a53-6e48-f2406d030ce1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "assignement_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0862cddf3f1efe572",
            "domain": "vpc",
            "id": "eipalloc-0862cddf3f1efe572",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-234-26.compute-1.amazonaws.com",
            "public_ip": "3.228.234.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "1979-assignement_eip-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_eip-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06746ebe9e91aef97",
            "domain": "vpc",
            "id": "eipalloc-06746ebe9e91aef97",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-218-54.compute-1.amazonaws.com",
            "public_ip": "54.164.218.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "1979-assignement_eip-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_eip-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fb2eddc935554e",
            "domain": "vpc",
            "id": "eipalloc-0f5fb2eddc935554e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-75-197.compute-1.amazonaws.com",
            "public_ip": "18.235.75.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "1979-assignement_eip-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_eip-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "assignement_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:internet-gateway/igw-0c8f418872249a9e7",
            "id": "igw-0c8f418872249a9e7",
            "owner_id": "557771927808",
            "tags": {
              "Name": "1979-assignement_igw",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_igw",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "assignement_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0862cddf3f1efe572",
            "association_id": "eipassoc-027f500794c20693b",
            "connectivity_type": "public",
            "id": "nat-07a9a2034fe9d8b61",
            "network_interface_id": "eni-0ce46ddf5d2ee014f",
            "private_ip": "10.0.7.162",
            "public_ip": "3.228.234.26",
            "subnet_id": "subnet-01b45552e705ffb4b",
            "tags": {
              "Name": "1979-assignement_nat_gateway-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_nat_gateway-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            }
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06746ebe9e91aef97",
            "association_id": "eipassoc-07d995e3bfed8ba1c",
            "connectivity_type": "public",
            "id": "nat-0c4b38318658a532e",
            "network_interface_id": "eni-077bc1ead09d21583",
            "private_ip": "10.0.11.246",
            "public_ip": "54.164.218.54",
            "subnet_id": "subnet-0849dadabc831f24d",
            "tags": {
              "Name": "1979-assignement_nat_gateway-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_nat_gateway-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            }
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fb2eddc935554e",
            "association_id": "eipassoc-08afb9b81b4c63957",
            "connectivity_type": "public",
            "id": "nat-03e13ef0d7381f92b",
            "network_interface_id": "eni-04d0f819e1a62750b",
            "private_ip": "10.0.15.9",
            "public_ip": "18.235.75.197",
            "subnet_id": "subnet-095feb6151dee8971",
            "tags": {
              "Name": "1979-assignement_nat_gateway-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_nat_gateway-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            }
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "assignement_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:route-table/rtb-0d4eb24b90497c74a",
            "id": "rtb-0d4eb24b90497c74a",
            "owner_id": "557771927808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a9a2034fe9d8b61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1979-assignement_private_rt-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_rt-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "timeouts": null,
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:route-table/rtb-0d51631dc4991daf0",
            "id": "rtb-0d51631dc4991daf0",
            "owner_id": "557771927808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c4b38318658a532e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1979-assignement_private_rt-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_rt-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "timeouts": null,
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:route-table/rtb-048af90d4ae9f7cc0",
            "id": "rtb-048af90d4ae9f7cc0",
            "owner_id": "557771927808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e13ef0d7381f92b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1979-assignement_private_rt-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_rt-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "timeouts": null,
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "assignement_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:route-table/rtb-0243924580971d768",
            "id": "rtb-0243924580971d768",
            "owner_id": "557771927808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8f418872249a9e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1979-assignement_public_rt",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_public_rt",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "timeouts": null,
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assignement_private_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058efee59677f69f9",
            "route_table_id": "rtb-0d4eb24b90497c74a",
            "subnet_id": "subnet-005679c052402f386"
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_route_table.assignement_rt_private",
            "aws_subnet.assignement_private_subnet",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0bc19299d120c96",
            "route_table_id": "rtb-0d51631dc4991daf0",
            "subnet_id": "subnet-092bae071e5334de4"
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_route_table.assignement_rt_private",
            "aws_subnet.assignement_private_subnet",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06984aa0300931058",
            "route_table_id": "rtb-048af90d4ae9f7cc0",
            "subnet_id": "subnet-025bfdd37e5449b99"
          },
          "dependencies": [
            "aws_eip.assignement_eip",
            "aws_internet_gateway.assignement_igw",
            "aws_nat_gateway.assignement_nat_gateway",
            "aws_route_table.assignement_rt_private",
            "aws_subnet.assignement_private_subnet",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assignement_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0e62e8ec270592",
            "route_table_id": "rtb-0243924580971d768",
            "subnet_id": "subnet-01b45552e705ffb4b"
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_route_table.assignement_rt_public",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077df32ceaebb5294",
            "route_table_id": "rtb-0243924580971d768",
            "subnet_id": "subnet-0849dadabc831f24d"
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_route_table.assignement_rt_public",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076cb58d366a46eaf",
            "route_table_id": "rtb-0243924580971d768",
            "subnet_id": "subnet-095feb6151dee8971"
          },
          "dependencies": [
            "aws_internet_gateway.assignement_igw",
            "aws_route_table.assignement_rt_public",
            "aws_subnet.assignement_public_subnet",
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "assignement_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-005679c052402f386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005679c052402f386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_private_subnet-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_subnet-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-092bae071e5334de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092bae071e5334de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_private_subnet-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_subnet-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-025bfdd37e5449b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025bfdd37e5449b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_private_subnet-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_private_subnet-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "assignement_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-01b45552e705ffb4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b45552e705ffb4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_public_subnet-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_public_subnet-0",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-0849dadabc831f24d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0849dadabc831f24d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_public_subnet-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_public_subnet-1",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:subnet/subnet-095feb6151dee8971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095feb6151dee8971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557771927808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1979-assignement_public_subnet-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "1979-assignement_public_subnet-2",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "vpc_id": "vpc-070a20f65fa4b047a"
          },
          "dependencies": [
            "aws_vpc.assignement_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assignement_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557771927808:vpc/vpc-070a20f65fa4b047a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0172ced8e9a61a1be",
            "default_route_table_id": "rtb-0c67b615b95fba877",
            "default_security_group_id": "sg-01c96e75a5039f2e8",
            "dhcp_options_id": "dopt-06122e4f9c7693846",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070a20f65fa4b047a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c67b615b95fba877",
            "owner_id": "557771927808",
            "tags": {
              "Name": "assignement_vpc",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            },
            "tags_all": {
              "Name": "assignement_vpc",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "1979",
              "owner": "tinno-DevOps",
              "project": "S3 Backend",
              "teams": "PD"
            }
          }
        }
      ]
    }
  ]
}